@startuml aggregate
title Aggregate – UML-Darstellung

package "core.domain.workout" {
  class Workout <<record>> {
    - id : int
    - name : String
    - type : WorkoutType
    - trainingDays : List<TrainingDay>
    - username : String
    - frequency : int
    - split : TrainingSplit
  }
}

class core.domain.exercise.TrainingDay {
    - name : String
    - exercises : List<Exercise>
}

class core.domain.exercise.Exercise {
    - id : int
    - name : String
    - category : ExerciseCategory
    - difficulty : Difficulty
    - description : String
    - targetMuscles : List<MuscleGroup>
    + compareTo(other: Exercise) : int
}


Workout "1" *-- "many" TrainingDay : besteht aus
TrainingDay "1" *-- "many" Exercise : enthält

@enduml
